# chainlit-project

./: README.md  app.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Header.jsx  LanguageSwitcher.jsx  LoginModal.jsx  ThemeSwitcher.jsx
frontend/src/components/chat/: Chat.jsx  ChatInput.jsx  LikeButton.jsx  Message.jsx  MessageList.jsx
frontend/src/config/: i18n.js
frontend/src/locales/: en.json  fr.json
frontend/src/utils/: simulateResponse.js
