[project]
name = "chainlit-project"
version = "0.1.0"
description = ""
authors = [
    {name = "andric-dusica",email = "dusica.andric@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "chainlit (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
